--- a/modello/modello_rev_2.tex
+++ b/modello/modello_rev_2.tex
@@ -39,11 +39,13 @@
 % typeset the header of the contribution
 %
 \begin{abstract}
-DA FINIRE QUANDO ABBIAMO MESSO A POSTO LA SEZIONE ESPERIMENTI.
 Questo progetto tratta la realizzazione attraverso il pacchetto \emph{Whoosh}, di un motore di ricerca
 volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.
+Si \`e affrontato il problema della valutazione del sistema di ricerca studiando l'effetto dell'esclusione
+di diversi insiemi di stopword. Nella relazione verr\`a evidenziato come l'uso delle stopword migliori l'efficacia
+del sistema IR.
 Il progetto è anche corredato di un webserver che permette all'utente di interrogare il motore di ricerca
-in forma interattiva attraverso un browser a scelta.
+in forma interattiva, attraverso un browser a scelta.
  \keywords{{\it
       Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python \and webserver \and web \and interrogazione web}}
 \end{abstract}
