--- a/modello/modello_rev_2.tex
+++ b/modello/modello_rev_2.tex
@@ -47,7 +47,7 @@ del sistema IR.
 Il progetto è anche corredato di un webserver che permette all'utente di interrogare il motore di ricerca
 in forma interattiva, attraverso un browser a scelta.
  \keywords{{\it
-      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python \and webserver \and web \and interrogazione web}}
+      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python \and webserver \and web \and interrogazione web  \and stopword}}
 \end{abstract}
 
 \section{Introduzione}
