--- a/modello/modello_rev_2.tex
+++ b/modello/modello_rev_2.tex
@@ -16,7 +16,7 @@
 %
 \title{Sistema IR per collezione di articoli medici uilizzando diversi insiemi di stopword}
 %
-% \titlerunning{Abbreviated paper title}
+\titlerunning{Sistema IR per collezione OHSUMED}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
