--- a/modello/modello_rev_2.tex
+++ b/modello/modello_rev_2.tex
@@ -155,12 +155,12 @@ che da' la possibilita' di ottenere facilmente la suddivisione dei risultati in 
 
 Inoltre, per come e' scritta la funzione di ricerca, non sarebbe difficile
 implementare una funzionalita' di "ricerca avanzata" dando all'utente la possibilita'
-di cercare anche per autore o di scegliere l'opratore logico per collegare le parole
+di cercare anche per autore o di scegliere l'operatore logico per collegare le parole
 della query.
 
 Dopo aver effettuato la ricerca, l'utente viene indirizzato alle pagine contenenti
 i link dei risultati.
-Questi link poi rimandano alla pagina di pubmed dove c'e' l'articolo.
+Questi link poi rimandano alla pagina di \emph{PubMed} dove c'e' l'articolo.
 
 \section{Esperimenti e Risultati}
 \label{sec:esperimenti}
